--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image" href="/public/Logo_Sereia.png" />
+    <link rel="icon" type="image" href="/Logo_Sereia.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sereia Tattoo</title>
   </head>
